alterando Aluraflix para sammy' flix

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <title>AluraFlix</title>
+    <title>sammy's flix</title>
 </head>
 
 <body>
 
-    <header>Aluraflix</header>
+    <header>sammy's flix</header>
 
 <sectiion cass="chamada">
     <divi>
